# nomad-distro-dev

./: .env.north  .gitignore  .gitmodules  README.md  docker-compose.yaml  generate_profile_list.py  nomad.yaml  profile_list_generated.yaml  pyproject.toml
.devcontainer/: devcontainer.json
backups/: config.py  docker-compose copy.yaml  north copy 2.py  north.py  north_new.py  notes.md  profile_list.yaml  profile_list_generated.yaml
texts/: mapping_parser_technical_docs.md
