[project]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.3.10",
  "nomad-simulations",
  "nomad-simulation-parsers",
  "nomad-simulation-examples",
  "nomad-reprocessing-plugin",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-normalizer-plugin-dos>=1.0",
  "nomad-normalizer-plugin-soap>=1.0",
  "nomad-normalizer-plugin-spectra>=1.0",
  "nomad-normalizer-plugin-system>=1.0",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0",
  "nomad-parser-plugins-database>=1.0",
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/nomad-custom-optimade-example"]

[tool.uv.sources]
nomad-lab = { workspace = true }
nomad-simulations = { workspace = true }
nomad-simulation-parsers = { workspace = true }
nomad-simulation-examples = { workspace = true }
nomad-reprocessing-plugin = { workspace = true }
nomad-nmr-schema = { git = "https://github.com/FAIRmat-NFDI/nomad-schema-plugin-nmr", branch = "main" }

[dependency-groups]
dev = [
  "nomad-lab[parsing, infrastructure, dev]>=1.3.4",
  "poethepoet>=0.29.0",
  "pip-audit",  # Security scanner for Python dependencies - checks installed packages against OSV vulnerability database
]
# NOTE: Docs dependencies duplicated from nomad-simulations [project.optional-dependencies].docs
# This is required because uv workspaces do not automatically install optional dependencies
# from workspace members. See README.md "Common Issues" section for details.
# TODO: Find better workaround when uv improves workspace member extras handling
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.5",
  "mkdocs-click",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-panzoom-plugin>=0.5.2",
]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
required-version = ">=0.5.14"
constraint-dependencies = ["flatdict>=4.1.0"]
override-dependencies = [
  "nomad-simulations @ file:///home/nathan/Documents/nomad-distro-schema/packages/nomad-schema-plugins-simulations",
]

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
docker = "docker compose up -d"
setup = ["gui-env", "gui-setup", "docker", "config"]
lint = ["ruff-lint", "ruff-format"]

[tool.poe.tasks.start]
cmd = "nomad admin run appworker --dev"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.cpuworker]
cmd = "nomad admin run action-cpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.gpuworker]
cmd = "nomad admin run action-gpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.config]
shell = """
import os;
if not os.path.exists("nomad.yaml"):
    with open("nomad.yaml", "w") as f:
        f.write("keycloak:\\n  realm_name: \\"fairdi_nomad_test\\"\\n")
"""
interpreter = "python"

[tool.poe.tasks.gui-env]
cmd = "python -W ignore -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-docs"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.hub]
cmd = "nomad admin run hub"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.gui]
cmd = "yarn run"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gui-setup]
cmd = "yarn"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -W ignore -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"
